--- a/R2/R2-Langchain-Tutorial.ipynb
+++ b/R2/R2-Langchain-Tutorial.ipynb
@@ -33,13 +33,26 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import BitsAndBytesConfig, AutoModelForCausalLM, AutoTokenizer, GenerationConfig, pipeline\n",
+    "from transformers import BitsAndBytesConfig\n",
     "\n",
-    "from langchain import HuggingFaceHub, LLMChain\n",
+    "from langchain import LLMChain\n",
     "from langchain.prompts import ChatPromptTemplate, PromptTemplate, HumanMessagePromptTemplate\n",
     "from langchain_core.messages import HumanMessage, AIMessage, SystemMessage\n",
-    "from langchain_community.llms.huggingface_pipeline import HuggingFacePipeline\n",
-    "from langchain.schema import StrOutputParser"
+    "from langchain_huggingface import HuggingFacePipeline, ChatHuggingFace\n",
+    "from langchain.schema import StrOutputParser\n",
+    "from langchain_huggingface import ChatHuggingFace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import notebook_login\n",
+    "\n",
+    "# chat model 需要使用 hf 的 token\n",
+    "notebook_login()"
    ]
   },
   {
@@ -47,7 +60,11 @@
    "metadata": {},
    "source": [
     "### 1. LLMs\n",
-    "透過 Langchain 載入 Huggingface 上的各種大型語言模型"
+    "透過 Langchain 載入 Huggingface 上的各種大型語言模型，在 Langchain 內模型可以分為\n",
+    "\n",
+    "1. LLM 模式：給予文字輸入，然後文字輸出\n",
+    "\n",
+    "2. Chat Models 模式：基於LLM模式的更進階的模式，他的輸入和輸出是格式化的chat messages"
    ]
   },
   {
@@ -65,7 +82,7 @@
     "    bnb_4bit_quant_type=\"nf4\",\n",
     "    bnb_4bit_use_double_quant=True)\n",
     "\n",
-    "# 模型初始化\n",
+    "# llm 初始化\n",
     "llm = HuggingFacePipeline.from_model_id(\n",
     "    model_id=MODEL_NAME,\n",
     "    task=\"text-generation\",\n",
@@ -79,7 +96,10 @@
     "        temperature=0.0001,\n",
     "        top_p=0.95,\n",
     "        do_sample=True,\n",
-    "        repetition_penalty=1.15) )"
+    "        repetition_penalty=1.15) )\n",
+    "\n",
+    "# chat model 初始化\n",
+    "chat_llm = ChatHuggingFace(llm=llm)"
    ]
   },
   {
@@ -184,7 +204,7 @@
     "    ]\n",
     ")\n",
     "messages = chat_template.format_messages(name=\"Bob\", user_input=\"你叫什麼名字？\")\n",
-    "print(messages)"
+    "print(chat_llm.invoke(messages).content)"
    ]
   },
   {
@@ -267,16 +287,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 需要加入 Instruction 參數，才能告訴模型你的對話結束了\n",
+    "# 需要加入 Instruction 參數，才能告訴模型你的對話結束了，因目前使用的模型上不支援 chat 模式\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\"system\", \"你是一位專業的資料科學家和機器學習工程師，能夠提供專業的知識並準確地回答問題。\",),\n",
-    "        (\"human\", \"[INST]{question}[/INST]\\n\"),\n",
+    "        (\"human\", \"{question}\"),\n",
     "    ]\n",
     ")\n",
     "\n",
     "# 使用 LCEL 將 Prompt 與 LLM 等串接起來\n",
-    "llm_chain = prompt | llm | StrOutputParser()\n",
+    "llm_chain = prompt | chat_llm | StrOutputParser()\n",
     "\n",
     "# 將問題透過參數化的方式帶入\n",
     "print(llm_chain.invoke({\"question\": \"機器學習和深度學習有什麼不同？\"}))"
