--- a/R5/R5-HW.ipynb
+++ b/R5/R5-HW.ipynb
@@ -7,8 +7,8 @@
     "# R5: 回家作業\n",
     "- 任務\n",
     "    1. 載入文本模型，直接跟 LLM 進行QA\n",
-    "    2. 參考 Tutorial 的內容，讓 LLM 根據 語料庫的內容進行回答\n",
-    "    2. 分別嘗試 chunk, prompt, 召回數量, 召回方式, rerank 等RAG 的優化策略，嘗試提升 RAG 的效度"
+    "    2. 將 各組 選定的語料庫內容 匯入向量資料庫\n",
+    "    3. 參考 Tutorial 的內容，分別嘗試 chunk, prompt, 召回數量, 召回方式, rerank 等RAG 的優化策略，嘗試提升 RAG 的效度"
    ]
   },
   {
